refactoring code to MVC architecture

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ h1 {
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
+
 .popup .popup-btn-container {
   text-align: right;
 }
@@ -346,6 +347,7 @@ h1 {
 }
 
 .border-true {
+  height: 20px;
   border: 1px solid white;
 }
 .margin-between {
@@ -398,4 +400,43 @@ h1 {
   .how-it-works-popup {
     width: 90%;
   }
+}
+
+.spinner {
+  margin: 5rem auto;
+  text-align: center;
+}
+
+.spinner svg {
+  height: 6rem;
+  width: 6rem;
+  fill: #ffffff;
+  -webkit-animation: rotate 2s infinite linear;
+  animation: rotate 2s infinite linear;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.hidden {
+  display: none;
 }
