--- a/style.css
+++ b/style.css
@@ -1,18 +1,46 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   color: rgb(255, 255, 255);
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-  background: rgb(12, 0, 50) !important;
-  height: 100%;
-}
-.wrapper {
-  /*   background-color: rgba(0, 0, 0, 0.2);*/
-  width: 100%;
+  background: linear-gradient(
+    -45deg,
+    #1d3958ff,
+    #353652ff,
+    #4c334dff,
+    #643047ff,
+    #7c2e41ff,
+    #942b3bff,
+    #ab2836ff,
+    #c32530ff,
+    #db222aff
+  );
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
   height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
   margin: 20px auto;
 }
 
@@ -31,9 +59,10 @@ body {
   max-width: 1200px;
   max-height: 360px;
   margin: auto;
+  padding-top: 15px;
 }
 
-.points-value-container,
+.left-movie-data-container,
 .img-container,
 .text-container {
   flex: 1 1 0px;
@@ -80,10 +109,9 @@ h1 {
 }
 
 .tiles-container {
-  width: 240px;
+  min-width: 240px;
   max-width: 240px;
   height: 360px;
-  max-height: 360px;
   display: flex;
   flex-wrap: wrap;
 
@@ -93,10 +121,9 @@ h1 {
   width: 240px;
   height: 360px;
 }
-.points-value-container {
-  display: flex;
-  justify-content: center;
-}
+/* .points-value-container {
+  margin-left: 10px;
+} */
 .title {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -124,6 +151,16 @@ h1 {
   letter-spacing: 2px;
   transition: all 0.3s ease-in-out;
   text-transform: uppercase;
+}
+
+.btn-styled.btn-movie-data {
+  margin: 0;
+}
+
+.btn-styled:hover {
+  cursor: pointer;
+  color: black;
+  background: white;
 }
 
 /* .submit-btn,
@@ -198,8 +235,11 @@ h1 {
   text-transform: uppercase;
 }
 
-#answer-value {
-  color: rgb(63, 167, 63);
+#answer-value,
+.total-points span {
+  color: black;
+  background-color: white;
+  border-radius: 3px;
 }
 
 .uncover-btn,
@@ -217,48 +257,35 @@ h1 {
 }
 
 .how-it-works-popup {
-  background: rgba(53, 0, 212, 0.9);
-  width: 50vw;
-  height: 600px;
+  background: rgba(2, 1, 5, 0.9);
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
   text-align: center;
   font-size: 20px;
   z-index: 100;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
 }
-
-.how-it-works-popup button {
-  background: rgba(53, 0, 212, 0);
-  color: white;
-  border: 1px solid white;
-}
-
-.how-it-works-popup button:hover {
-  color: white;
-  background: rgba(26, 0, 97.9);
+.how-it-works-popup h4 {
+  margin-bottom: 30px;
 }
 .how-it-works-popup p {
-  color: white;
+  line-height: 25px;
 }
-.how-it-works-popup p:nth-of-type(1) {
-  text-decoration: underline;
-  font-size: 30px;
-  font-weight: bold;
+.how-it-works-popup button {
+  margin: auto;
+  margin-top: 30px;
 }
 
 .how-it-works-popup-text-wrapper {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 80%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  max-width: 800px;
 }
 
 .popup {
@@ -317,11 +344,6 @@ h1 {
   align-items: center;
 }
 
-.popup .close:hover {
-  background: rgb(26, 0, 97);
-  border: 1px solid white;
-}
-
 .popup p:nth-of-type(1) {
   text-transform: uppercase;
   font-weight: bold;
@@ -359,6 +381,7 @@ h1 {
   align-items: center;
   flex-wrap: wrap;
   margin: 20px 0px;
+  text-align: center;
 }
 
 #letter-choice-wrapper {
@@ -403,31 +426,6 @@ h1 {
 }
 /* -----------------------------------END OFDRAG AND DROP STYLING----------------------------------- */
 
-@media (max-width: 930px) {
-  .wrapper {
-    width: 100%;
-  }
-  .popup {
-    width: 70vw;
-    height: 70vh;
-  }
-
-  .fa-check-circle {
-    font-size: 100px;
-  }
-
-  .how-it-works-popup p {
-    font-size: 16px;
-  }
-  .how-it-works-popup {
-    width: 90%;
-  }
-
-  .movie-data-container {
-    flex-direction: column;
-  }
-}
-
 .spinner {
   margin: 5rem auto;
   text-align: center;
@@ -471,11 +469,85 @@ h1 {
   list-style: none;
 }
 
+.text-container div {
+  margin-bottom: 10px;
+}
+
+.text-container h5 {
+  text-decoration: underline;
+  margin-bottom: 5px;
+  font-weight: 700;
+}
+
 .text-container,
 .points-value-container {
-  font-size: 13px;
+  font-size: 14px;
+}
+
+select {
+  background-color: black;
+  margin-left: 20px;
+  overflow: hidden;
+}
+
+select option {
+  overflow-y: scroll;
 }
 
 .hidden {
   display: none;
+}
+
+@media (max-width: 930px) {
+  .wrapper {
+    width: 90vw;
+    height: 100%;
+  }
+
+  .fa-check-circle {
+    font-size: 100px;
+  }
+
+  .how-it-works-popup p {
+    font-size: 16px;
+  }
+
+  .movie-data-container {
+    flex-direction: column;
+    max-height: none;
+    align-items: center;
+    text-align: center;
+  }
+
+  .btn-styled {
+    margin: 3px;
+    padding: 0px 10px;
+    letter-spacing: 1px;
+    font-size: 12px;
+    align-items: center;
+  }
+
+  .cast-container,
+  .synopsis-container,
+  .release-date-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  /* .button-container {
+    padding-bottom: 30px;
+  } */
+
+  .letter-choice,
+  .title-placeholder,
+  .special-char-placeholder {
+    font-size: 21px;
+    width: 22px;
+    height: 22px;
+  }
+
+  /*   .tiles-container {
+    min-width: 240px;
+  } */
 }
