--- a/style.css
+++ b/style.css
@@ -373,6 +373,27 @@ h1 {
   }
 }
 
+.error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 2px solid #ffffff;
+  border-radius: 10px;
+  padding: 10px;
+}
+.error svg {
+  fill: #f38e82;
+  height: 30px;
+  width: 30px;
+}
+
+.movie-data-container .error {
+  height: 360px;
+  width: 240px;
+}
+
 /* -----------------------------------DRAG AND DROP STYLING----------------------------------- */
 #dropZone-wrapper {
   margin: auto;
