--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   );
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  height: 100vh;
+  height: 100%;
 }
 
 @keyframes gradient {
@@ -263,6 +263,7 @@ h1 {
   top: 0;
   right: 0;
   bottom: 0;
+  overflow: hidden;
   padding: 20px;
   text-align: center;
   font-size: 20px;
@@ -292,9 +293,10 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: rgba(40, 40, 40, 0.9);
-  width: 500px;
-  height: 400px;
+  align-items: center;
+  background: rgba(12, 12, 12, 0.9);
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -302,61 +304,37 @@ h1 {
   text-align: center;
   font-size: 20px;
   z-index: 100;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-}
-
-.popup .popup-btn-container {
-  text-align: right;
 }
 
 .popup .popup-text {
   display: flex;
+  border: 4px solid #ffffff;
+  border-radius: 20px;
+  height: 50vh;
+  width: 50vw;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  padding: 10px;
 }
 
-.popup .play-again-btn {
-  width: 100px;
-  height: 30px;
-  background: none;
-  border: 1px solid white;
+.popup .popup-btn-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.popup .play-again-btn:hover {
-  background: rgb(26, 0, 97);
-  border: 1px solid white;
-}
-
-.popup .close {
-  margin-top: 10px;
-  width: 100px;
-  height: 30px;
-  background: none;
-  border: 1px solid white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.popup p:nth-of-type(1) {
+.popup h5 {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
 .fa-check-circle {
-  font-size: 150px;
+  font-size: 100px;
   color: white;
   animation-name: color;
-  animation-duration: 2s;
+  animation-duration: 5s;
   animation-iteration-count: infinite;
   margin-bottom: 10px;
 }
@@ -366,7 +344,7 @@ h1 {
     color: white;
   }
   50% {
-    color: rgb(63, 167, 63);
+    color: rgb(65, 158, 100);
   }
   100% {
     color: white;
@@ -525,12 +503,13 @@ select option {
     height: 100%;
   }
 
-  .fa-check-circle {
-    font-size: 100px;
-  }
-
   .how-it-works-popup p {
     font-size: 16px;
+  }
+
+  .popup .popup-text {
+    height: 80vh;
+    width: 80vw;
   }
 
   .movie-data-container {
@@ -571,4 +550,19 @@ select option {
   /*   .tiles-container {
     min-width: 240px;
   } */
+}
+
+@media (max-width: 500px) {
+  .popup-text h5 {
+    font-size: 15px;
+  }
+
+  .popup .popup-btn-container {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .fa-check-circle {
+    font-size: 100px;
+  }
 }
